# yolo11-onnx-cpp

./: .gitignore  CMakeLists.txt  README.md  build_ffmpeg.sh  build_opencv.sh  build_realsense.sh  build_yaml_cpp.sh
include/: ThreadSafeQueues.hpp  Utils.hpp  YOLO11Class.hpp  YOLO11Det.hpp  YOLO11Obb.hpp  YOLO11Pose.hpp  YOLO11Seg.hpp
models/: classes.names  rack_block-pose.yaml
src/: camera_inference.cpp  image_inference.cpp  video_inference.cpp
